--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,117 +18,192 @@
     />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="/" class="logo"> <img src="./images/logo.svg" alt="Логотип компании" /></a>
+    <div class="container">
+      <header>
+        <div class="container all-nav">
+          <nav class="main-nav">
+            <a href="/" class="logo">
+              <img src="./images/logo.svg" alt="Логотип компании"
+            /></a>
 
-        <ul class="site-nav list">
-          <li><a href=" " class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href=" " class="link">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul class="header-contacts list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
+            <ul class="site-nav list">
+              <li class="item"><a href=" " class="link current">Студия</a></li>
+              <li class="item">
+                <a href="./portfolio.html" class="link">Портфолио</a>
+              </li>
+              <li class="item"><a href=" " class="link">Контакты</a></li>
+            </ul>
+          </nav>
+          <ul class="header-contacts list">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
+      </header>
 
-    <main>
-      <section class="hero">
-        <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
-        <button type="button" class="button main">Заказать услугу</button>
-      </section>
+      <main>
+        <section class="hero">
+          <h1 class="hero-title">
+            Эффективные решения<br />для вашего бизнеса
+          </h1>
+          <button type="button" class="button main">Заказать услугу</button>
+        </section>
 
-      <section>
-        <h2 hidden>Детали секции</h2>
+        <div class="container worker-info">
+          <section>
+            <h2 hidden>Детали секции</h2>
 
-        <ul class="section-list list">
-          <li>
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="info-title">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
+            <ul class="section-list list">
+              <li>
+                <h3 class="title">Внимание к деталям</h3>
+                <p class="info-title">
+                  Идейные соображения, а также начало повседневной работы по
+                  формированию позиции.
+                </p>
+              </li>
 
-          <li>
-            <h3 class="title">Пунктуальность</h3>
-            <p class="info-title">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
+              <li>
+                <h3 class="title">Пунктуальность</h3>
+                <p class="info-title">
+                  Задача организации, в особенности же рамки и место обучения
+                  кадров влечет за собой.
+                </p>
+              </li>
 
-          <li>
-            <h3 class="title">Планирование</h3>
-            <p class="info-title">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
+              <li>
+                <h3 class="title">Планирование</h3>
+                <p class="info-title">
+                  Равным образом консультация с широким активом в значительной
+                  степени обуславливает.
+                </p>
+              </li>
 
-          <li>
-            <h3 class="title">Современные технологии</h3>
-            <p class="info-title">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
+              <li>
+                <h3 class="title">Современные технологии</h3>
+                <p class="info-title">
+                  Значимость этих проблем настолько очевидна, что реализация
+                  плановых заданий.
+                </p>
+              </li>
+            </ul>
+          </section>
 
-      <section>
-        <h2 class="activity">Чем мы занимаемся</h2>
-        <ul class="photos list">
-          <li>
-            <img src="./images/img111.jpg" alt="Печатает на клавиатуре" width="370" height="294" />
-          </li>
-          <li>
-            <img src="./images/img222.jpg" alt="Телефон и компьютер" width="370" height="294" />
-          </li>
-          <li>
-            <img src="./images/img333.jpg" alt="3D макет" width="370" height="294" />
-          </li>
-        </ul>
-      </section>
+          <div class="container info-activity">
+            <section>
+              <h2 class="activity">Чем мы занимаемся</h2>
+              <div class="container-activity">
+                <ul class="photos list">
+                  <li class="photo-section">
+                    <img
+                      src="./images/img111.jpg"
+                      alt="Печатает на клавиатуре"
+                      width="370"
+                      height="294"
+                    />
+                  </li>
+                  <li class="photo-section">
+                    <img
+                      src="./images/img222.jpg"
+                      alt="Телефон и компьютер"
+                      width="370"
+                      height="294"
+                    />
+                  </li>
+                  <li class="photo-section">
+                    <img
+                      src="./images/img333.jpg"
+                      alt="3D макет"
+                      width="370"
+                      height="294"
+                    />
+                  </li>
+                </ul>
+              </div>
+            </section>
+          </div>
 
-      <section class="section-team">
-        <h2 class="our-team">Наша команда</h2>
-        <ul class="team-info list">
-          <li class="team-worker">
-            <img src="./images/ihor1.jpg" alt="Фото работника" width="270" height="260" />
-            <h3 class="worker">Игорь Демьяненко</h3>
-            <p class="profession">Product Designer</p>
-          </li>
-          <li class="team-worker">
-            <img src="./images/olha1.jpg" alt="Фото работника" width="270" height="260" />
-            <h3 class="worker">Ольга Репина</h3>
-            <p class="profession">Frontend Developer</p>
-          </li>
-          <li class="team-worker">
-            <img src="./images/nick1.jpg" alt="Фото работник" width="270" height="260" />
-            <h3 class="worker">Николай Тарасов</h3>
-            <p class="profession">Marketing</p>
-          </li>
-          <li class="team-worker">
-            <img src="./images/mick1.jpg" alt="Фото работника" width="270" height="260" />
-            <h3 class="worker">Михаил Ермаков</h3>
-            <p class="profession">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
+          <div class="container">
+            <section class="section-team">
+              <h2 class="our-team">Наша команда</h2>
+              <ul class="team-info list">
+                <li class="team-worker">
+                  <img
+                    src="./images/ihor1.jpg"
+                    alt="Фото работника"
+                    width="270"
+                    height="260"
+                  />
+                  <h3 class="worker">Игорь Демьяненко</h3>
+                  <p class="profession">Product Designer</p>
+                </li>
+                <li class="team-worker">
+                  <img
+                    src="./images/olha1.jpg"
+                    alt="Фото работника"
+                    width="270"
+                    height="260"
+                  />
+                  <h3 class="worker">Ольга Репина</h3>
+                  <p class="profession">Frontend Developer</p>
+                </li>
+                <li class="team-worker">
+                  <img
+                    src="./images/nick1.jpg"
+                    alt="Фото работник"
+                    width="270"
+                    height="260"
+                  />
+                  <h3 class="worker">Николай Тарасов</h3>
+                  <p class="profession">Marketing</p>
+                </li>
+                <li class="team-worker">
+                  <img
+                    src="./images/mick1.jpg"
+                    alt="Фото работника"
+                    width="270"
+                    height="260"
+                  />
+                  <h3 class="worker">Михаил Ермаков</h3>
+                  <p class="profession">UI Designer</p>
+                </li>
+              </ul>
+            </section>
+          </div>
+        </div>
+      </main>
 
-    <footer class="site-footer">
-      <a href="/"><img src="./images/WebStudio.svg" alt="Logo" /></a>
-      <address class="info">
-        <ul class="contact-info list">
-          <li>
-            <a href="https://goo.gl/maps/gQr4hHUSBrAV48xG7" class="info-map"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li><a href="mailto:info@devstudio.com" class="information">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="information">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
-    </footer>
+      <div class="container">
+        <footer class="site-footer">
+          <div class="logo-footer">
+            <a href="/"><img src="./images/WebStudio.svg" alt="Logo" /></a>
+          </div>
+          <address class="info">
+            <ul class="contact-info list">
+              <li>
+                <a href="https://goo.gl/maps/gQr4hHUSBrAV48xG7" class="info-map"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="information"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="information"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
