--- a/portfolio.html
+++ b/portfolio.html
@@ -44,38 +44,36 @@
       </div>
     </header>
     <main>
-      <section>
-        <div class="container buttons-list">
+      <h1 hidden>Портфолио</h1>
+      <div class="container buttons-list">
+        <section class="list-section">
           <ul class="buttons list">
-            <li>
+            <li class="btn-list">
               <button type="button" class="button portfolio">Все</button>
             </li>
-            <li>
+            <li class="btn-list">
               <button type="button" class="button portfolio">Веб-сайты</button>
             </li>
-            <li>
+            <li class="btn-list">
               <button type="button" class="button portfolio">Приложения</button>
             </li>
-            <li>
+            <li class="btn-list">
               <button type="button" class="button portfolio">Дизайн</button>
             </li>
-            <li>
+            <li class="btn-list">
               <button type="button" class="button portfolio">Маркетинг</button>
             </li>
           </ul>
-        </div>
 
-        <h1 hidden>Портфолио</h1>
-        <div class="container">
           <ul class="flex-container list">
             <li class="flex-elements">
               <a href="" class="card"
-                ><img src="./images/imgfirst1.jpg" alt="Технокряк"
-              /></a>
-              <div class="flex">
-                <h2 class="title-card">Технокряк</h2>
-                <p class="text-card">Веб-сайт</p>
-              </div>
+                ><img src="./images/imgfirst1.jpg" alt="Технокряк" />
+                <div class="flex">
+                  <h2 class="title-card">Технокряк</h2>
+                  <p class="text-card">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="flex-elements">
               <a href="" class="card">
@@ -84,11 +82,12 @@
                   alt="Постер"
                   width="370"
                   height="294"
-              /></a>
-              <div class="flex">
-                <h2 class="title-card">Постер New Orlean vs Golden Star</h2>
-                <p class="text-card">Дизайн</p>
-              </div>
+                />
+                <div class="flex">
+                  <h2 class="title-card">Постер New Orlean vs Golden Star</h2>
+                  <p class="text-card">Дизайн</p>
+                </div></a
+              >
             </li>
             <li class="flex-elements">
               <a href="" class="card"
@@ -97,11 +96,12 @@
                   alt="Ресторан"
                   width="370"
                   height="294"
-              /></a>
-              <div class="flex">
-                <h2 class="title-card">Ресторан Seafood</h2>
-                <p class="text-card">Приложение</p>
-              </div>
+                />
+                <div class="flex">
+                  <h2 class="title-card">Ресторан Seafood</h2>
+                  <p class="text-card">Приложение</p>
+                </div></a
+              >
             </li>
             <li class="flex-elements">
               <a href="" class="card"
@@ -110,11 +110,12 @@
                   alt="Проект Прайм"
                   width="370"
                   height="294"
-              /></a>
-              <div class="flex">
-                <h2 class="title-card">Проект Prime</h2>
-                <p class="text-card">Маркетинг</p>
-              </div>
+                />
+                <div class="flex">
+                  <h2 class="title-card">Проект Prime</h2>
+                  <p class="text-card">Маркетинг</p>
+                </div></a
+              >
             </li>
             <li class="flex-elements">
               <a href="" class="card"
@@ -123,11 +124,12 @@
                   alt="Проект Бокс"
                   width="370"
                   height="294"
-              /></a>
-              <div class="flex">
-                <h2 class="title-card">Проект Boxes</h2>
-                <p class="text-card">Приложение</p>
-              </div>
+                />
+                <div class="flex">
+                  <h2 class="title-card">Проект Boxes</h2>
+                  <p class="text-card">Приложение</p>
+                </div></a
+              >
             </li>
             <li class="flex-elements">
               <a href="" class="card">
@@ -136,11 +138,12 @@
                   alt="Вдохоновение"
                   width="370"
                   height="294"
-              /></a>
-              <div class="flex">
-                <h2 class="title-card">Inspiration has no Borders</h2>
-                <p class="text-card">Веб-сайт</p>
-              </div>
+                />
+                <div class="flex">
+                  <h2 class="title-card">Inspiration has no Borders</h2>
+                  <p class="text-card">Веб-сайт</p>
+                </div></a
+              >
             </li>
             <li class="flex-elements">
               <a href="" class="card">
@@ -149,11 +152,12 @@
                   alt="Издание"
                   width="370"
                   height="294"
-              /></a>
-              <div class="flex">
-                <h2 class="title-card">Издание Limited Edition</h2>
-                <p class="text-card">Дизайн</p>
-              </div>
+                />
+                <div class="flex">
+                  <h2 class="title-card">Издание Limited Edition</h2>
+                  <p class="text-card">Дизайн</p>
+                </div></a
+              >
             </li>
             <li class="flex-elements">
               <a href="" class="card">
@@ -162,11 +166,12 @@
                   alt="Проект Лаб"
                   width="370"
                   height="294"
-              /></a>
-              <div class="flex">
-                <h2 class="title-card">Проект LAB</h2>
-                <p class="text-card">Маркетинг</p>
-              </div>
+                />
+                <div class="flex">
+                  <h2 class="title-card">Проект LAB</h2>
+                  <p class="text-card">Маркетинг</p>
+                </div></a
+              >
             </li>
             <li class="flex-elements">
               <a href="" class="card">
@@ -175,15 +180,16 @@
                   alt="Бизнес"
                   width="370"
                   height="294"
-              /></a>
-              <div class="flex">
-                <h2 class="title-card">Growing Business</h2>
-                <p class="text-card">Приложение</p>
-              </div>
+                />
+                <div class="flex">
+                  <h2 class="title-card">Growing Business</h2>
+                  <p class="text-card">Приложение</p>
+                </div></a
+              >
             </li>
           </ul>
-        </div>
-      </section>
+        </section>
+      </div>
     </main>
 
     <footer class="site-footer">
