--- a/index.html
+++ b/index.html
@@ -48,16 +48,18 @@
 
     <main>
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
         <button type="button" class="button main">Заказать услугу</button>
+        </div>
       </section>
 
-      <div class="container worker-info">
-        <section>
+      
+      <section class="second section">
+        <div class="container worker-info">
           <h2 hidden>Детали секции</h2>
-
           <ul class="section-list list">
-            <li>
+            <li class="section-info">
               <h3 class="title">Внимание к деталям</h3>
               <p class="info-title">
                 Идейные соображения, а также начало повседневной работы по
@@ -65,7 +67,7 @@
               </p>
             </li>
 
-            <li>
+            <li class="section-info">
               <h3 class="title">Пунктуальность</h3>
               <p class="info-title">
                 Задача организации, в особенности же рамки и место обучения
@@ -73,7 +75,7 @@
               </p>
             </li>
 
-            <li>
+            <li class="section-info">
               <h3 class="title">Планирование</h3>
               <p class="info-title">
                 Равным образом консультация с широким активом в значительной
@@ -81,7 +83,7 @@
               </p>
             </li>
 
-            <li>
+            <li class="section-info">
               <h3 class="title">Современные технологии</h3>
               <p class="info-title">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -93,7 +95,7 @@
       </div>
 
       <div class="container info-activity">
-        <section>
+        <section class="third-section">
           <h2 class="activity">Чем мы занимаемся</h2>
           <div class="container-activity">
             <ul class="photos list">
@@ -126,7 +128,7 @@
         </section>
       </div>
 
-      <section class="section-team">
+      <section class="section-team section">
         <div class="container">
           <h2 class="our-team">Наша команда</h2>
           <ul class="team-info list">
@@ -192,17 +194,17 @@
         </div>
         <address class="info">
           <ul class="contact-info list">
-            <li>
+            <li class="footer-class">
               <a href="https://goo.gl/maps/gQr4hHUSBrAV48xG7" class="info-map"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-class">
               <a href="mailto:info@devstudio.com" class="information"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="last">
+            <li class="footer-class">
               <a href="tel:+380961111111" class="information"
                 >+38 096 111 11 11</a
               >
