--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <header>
       <div class="container all-nav">
         <nav class="main-nav">
-          <a href="/" class="logo">
-            <img src="./images/logo.svg" alt="Логотип компании"
-          /></a>
+          <a class="class" href>Web 
+          <span class="second-class">Studio</span>
+        </a>
 
           <ul class="site-nav list">
             <li class="item"><a href=" " class="link current">Студия</a></li>
@@ -92,12 +92,12 @@
             </li>
           </ul>
         </section>
-      </div>
+       </div>
 
-      <div class="container info-activity">
-        <section class="third-section">
+      
+       <section class="third-section">
+        <div class="container info-activity">
           <h2 class="activity">Чем мы занимаемся</h2>
-          <div class="container-activity">
             <ul class="photos list">
               <li class="photo-section">
                 <img
@@ -124,9 +124,9 @@
                 />
               </li>
             </ul>
-          </div>
-        </section>
-      </div>
+        </div>
+      </section>
+      
 
       <section class="section-team section">
         <div class="container">
@@ -187,11 +187,9 @@
 
     <footer class="site-footer">
       <div class="container">
-        <div class="logo-footer">
-          <a href="/" class="logo-first"
-            ><img src="./images/WebStudio.svg" alt="Logo"
-          /></a>
-        </div>
+        <a class="class" href>Web 
+          <span class="another-class">Studio</span>
+        </a>
         <address class="info">
           <ul class="contact-info list">
             <li class="footer-class">
