--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,10 @@
     <header>
       <div class="container all-nav">
         <nav class="main-nav">
-          <a href="/" class="logo">
-            <img src="./images/logo.svg" alt="Логотип компании"
-          /></a>
+          <a class="class" href
+            >Web
+            <span class="second-class">Studio</span>
+          </a>
 
           <ul class="site-nav list">
             <li class="item">
@@ -195,9 +196,10 @@
     <footer class="site-footer">
       <div class="container">
         <div class="logo-footer">
-          <a href="/" class="logo-first"
-            ><img src="./images/WebStudio.svg" alt="Logo"
-          /></a>
+          <a class="class" href
+            >Web
+            <span class="another-class">Studio</span>
+          </a>
         </div>
         <address class="info">
           <ul class="contact-info list">
