--- a/index.html
+++ b/index.html
@@ -187,9 +187,12 @@
 
     <footer class="site-footer">
       <div class="container">
-        <a class="class" href>Web 
+        <div class="test-class">
+          <a class="class" href>Web 
           <span class="another-class">Studio</span>
         </a>
+        </div>
+        
         <address class="info">
           <ul class="contact-info list">
             <li class="footer-class">
